# combination_generator

./: README.md  pyproject.toml
src/combination_generator/: __init__.py  generate_combinations.py  main.py
