[project]
name = "combination-generator"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "streamlit>=1.39.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/combination_generator"]
